# TodoApp

./: CMakeLists.txt  README.md  main.cpp
include/: Enums.h  Structs.h  TodoApp.h  TodoModel.h
include/qt-assignment/: FileHelper.hpp
qml/: ColorSelector.qml  Todo.qml  TodoItem.qml  main.qml  qml.qrc
resources/: resources.qrc
src/: TodoApp.cpp  TodoModel.cpp
